--- a/style.css
+++ b/style.css
@@ -1,220 +1,344 @@
-*,
-::before,
-::after {
-    margin: 0;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
+
+* {
     padding: 0;
+    margin: 0;
     box-sizing: border-box;
 }
 
+:root {
+    --tenne-tawny: #d65108;
+    --tenne-tawny-dark: #b54507;
+}
+
 body {
-    background: #C4C4C4;
+    font-weight: 300;
+    font-size: 1.05rem;
+    line-height: 1.6;
+    font-family: 'Poppins', sans-serif;
 }
 
-.container-accueil {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.container-accueil h1 {
-    padding: 10px;
-    text-align: center;
-    font-size: clamp(30px, 8vw, 70px);
-    width: 100%;
-    font-weight: lighter;
-    background-color: #0474B5;
-    font-family: 'Shrikhand', cursive;
-    color: rgb(200, 200, 200);
-    text-shadow: 0 2px 8px rgba(0, 0, 0, 0.479);
-}
-
-/***************** Searh barre ****************/
-
-.container-search {
-    display: flex;
-    max-width: 350px;
-    width: 70%;
-    margin-top: 30px;
-    border-radius: 10px;
-    overflow: hidden;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
-}
-
-.search {
-    background-color: #0474B5;
-    position: relative;
-    width: 20%;
-}
-
-.search img {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 40%;
-}
-
-input[type="text"] {
-    max-width: 300px;
-    width: 80%;
-    height: 50px;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-    padding-left: 10px;
-    border: none;
-    font-size: 20px;
+/*  */
+.btn {
+    font-family: inherit;
     cursor: pointer;
+    outline: 0;
+    font-size: 1.05rem;
 }
 
-/*********** Blocks recettes ******************/
-
-.container-recettes {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    width: 100%;
-    padding: 30px;
-    gap: 30px;
-    max-width: 2200px;
+.text {
+    opacity: 0.8;
 }
 
-.block-recette {
-    position: relative;
-    width: 400px;
-    height: 400px;
-    border-radius: 10px;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.479);
+.title {
+    font-size: 2rem;
+    margin-bottom: 1rem;
 }
 
-.devant {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    border-radius: 10px;
-    transition: filter 0.4s ease-in-out;
+/*  */
+.container {
+    min-height: 100vh;
 }
 
-.devant img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
-    border-radius: 10px;
-}
-
-.overlay {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+.meal-wrapper {
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 2rem;
+    background: #fff;
     text-align: center;
-    gap: 10px;
+}
+
+.meal-search {
+    margin: 2rem 0;
+}
+
+.meal-search cite {
+    font-size: 1rem;
+}
+
+.meal-search-box {
+    margin: 1.2rem 0;
+    display: flex;
+    align-items: stretch;
+}
+
+.search-control,
+.search-btn {
     width: 100%;
-    height: 0;
-    overflow: hidden;
-    color: white;
-    background-color: #0000009a;
-    transition: height 0.4s ease-in-out;
 }
 
-.overlay h4 {
-    font-size: clamp(25px, 3vw, 40px);
-    margin-bottom: 10px;
-    font-family: 'Merriweather', serif;
+.search-control {
+    padding: 0 1rem;
+    font-size: 1.1rem;
+    font-family: inherit;
+    outline: 0;
+    border: 1px solid var(--tenne-tawny);
+    color: var(--tenne-tawny);
+    border-top-left-radius: 2rem;
+    border-bottom-left-radius: 2rem;
 }
 
-.block-recette:hover .overlay {
-    height: 40%;
+.search-control::placeholder {
+    color: var(--tenne-tawny);
 }
 
-.block-recette:hover .devant {
-    filter: blur(2px);
-}
-
-.btn-instruction {
-    position: relative;
-    padding: 10px 15px;
-    cursor: pointer;
-    border-radius: 10px;
-    font-size: clamp(15px, 2vw, 25px);
-    font-weight: 600;
-    z-index: 1;
-    overflow: hidden;
+.search-btn {
+    width: 55px;
+    height: 55px;
+    font-size: 1.8rem;
+    background: var(--tenne-tawny);
+    color: #fff;
     border: none;
-    box-shadow: 0 2px 8px rgba(255, 255, 255, 0.459);
-    font-family: 'Karma', serif;
+    border-top-right-radius: 2rem;
+    border-bottom-right-radius: 2rem;
+    transition: all 0.4s linear;
+    -webkit-transition: all 0.4s linear;
+    -moz-transition: all 0.4s linear;
+    -ms-transition: all 0.4s linear;
+    -o-transition: all 0.4s linear;
 }
 
-.btn-instruction a {
+.search-btn:hover {
+    background: var(--tenne-tawny-dark);
+}
+
+.meal-result {
+    margin-top: 4rem;
+}
+
+#meal {
+    margin: 2.4rem 0;
+}
+
+.meal-item {
+    border-radius: 1rem;
+    -webkit-border-radius: 1rem;
+    -moz-border-radius: 1rem;
+    -ms-border-radius: 1rem;
+    -o-border-radius: 1rem;
+    overflow: hidden;
+    box-shadow: 0 4px 21px -12px rgba(0, 0, 0, 0.79);
+    margin: 2rem 0;
+}
+
+.meal-img img {
+    width: 100%;
+    display: block;
+}
+
+.meal-name {
+    padding: 1.5rem 0.5rem;
+}
+
+.meal-name h3 {
+    font-size: 1.4rem;
+}
+
+.recipe-btn {
     text-decoration: none;
-    color: black;
-    letter-spacing: 1px;
-    transition: color 0.3s ease-in-out;
+    color: #fff;
+    background: var(--tenne-tawny);
+    font-weight: 500;
+    font-size: 1.1rem;
+    padding: 0.75rem 0;
+    display: block;
+    width: 175px;
+    margin: 1rem auto;
+    border-radius: 2rem;
+    -webkit-border-radius: 2rem;
+    -moz-border-radius: 2rem;
+    -ms-border-radius: 2rem;
+    -o-border-radius: 2rem;
+    transition: all 0.4s linear;
+    -webkit-transition: all 0.4s linear;
+    -moz-transition: all 0.4s linear;
+    -ms-transition: all 0.4s linear;
+    -o-transition: all 0.4s linear;
 }
 
-.btn-instruction::after {
-    content: "";
-    z-index: -1;
-    position: absolute;
+.recipe-btn:hover {
+    background: var(--tenne-tawny-dark);
+}
+
+/* meal details */
+.meal-details {
+    position: fixed;
     top: 50%;
     left: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    color: #fff;
+    background: var(--tenne-tawny);
+    border-radius: 1rem;
+    -webkit-border-radius: 1rem;
+    -moz-border-radius: 1rem;
+    -ms-border-radius: 1rem;
+    -o-border-radius: 1rem;
+    width: 90%;
+    height: 90%;
+    overflow-y: scroll;
+    display: none;
+    padding: 2rem 0;
+}
+
+.meal-details::-webkit-scrollbar {
+    width: 10px;
+}
+
+.meal-details::-webkit-scrollbar-thumb {
+    background: #f0f0f0;
+    border-radius: 2rem;
+    -webkit-border-radius: 2rem;
+    -moz-border-radius: 2rem;
+    -ms-border-radius: 2rem;
+    -o-border-radius: 2rem;
+}
+
+
+/* js related */
+.showRecipe {
+    display: block;
+}
+
+.meal-details-content {
+    margin: 2rem;
+}
+
+.meal-details-content p:not(.recipe-category) {
+    padding: 1rem 0;
+}
+
+.recipe-close-btn {
+    position: absolute;
+    right: 2rem;
+    top: 2rem;
+    font-size: 1.8rem;
+    background: #fff;
+    border: none;
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0.9;
+}
+
+.recipe-title {
+    letter-spacing: 1px;
+    padding-bottom: 1rem;
+}
+
+.recipe-category {
+    background: #fff;
+    font-weight: 600;
+    color: var(--tenne-tawny);
+    display: inline-block;
+    padding: 0.2rem 0.5rem;
+    border-radius: 0.3rem;
+    -webkit-border-radius: 0.3rem;
+    -moz-border-radius: 0.3rem;
+    -ms-border-radius: 0.3rem;
+    -o-border-radius: 0.3rem;
+}
+
+.recipe-category {
+    background: #fff;
+    font-weight: 600;
+    color: var(--tenne-tawny);
+    display: inline-block;
+    padding: 0.2rem 0.5rem;
+    border-radius: 0.3rem;
+    -webkit-border-radius: 0.3rem;
+    -moz-border-radius: 0.3rem;
+    -ms-border-radius: 0.3rem;
+    -o-border-radius: 0.3rem;
+}
+
+.recipe-instruct {
+    padding: 1rem 0;
+}
+
+.recipe-meal-img img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    margin: 0 auto;
+    display: block;
+}
+
+.recipe-link {
+    margin: 1.4rem 0;
+}
+
+.recipe-link a {
+    color: #fff;
+    font-size: 1.2rem;
+    font-weight: 700;
+    transition: all 0.4s linear;
+    -webkit-transition: all 0.4s linear;
+    -moz-transition: all 0.4s linear;
+    -ms-transition: all 0.4s linear;
+    -o-transition: all 0.4s linear;
+}
+
+.recipe-link a:hover {
+    opacity: 0.8;
+}
+
+
+/*  */
+.notFound {
+    grid-template-columns: 1fr !important;
+    color: var(--tenne-tawny);
+    font-size: 1.8rem;
+    font-weight: 600;
     width: 100%;
-    height: 0;
-    transform: translate(-50%, -50%) rotate(26deg);
-    background-color: #0474b5;
-    transition: all 0.3s ease-in-out;
-}
-
-.btn-instruction:hover::after {
-    height: 250%;
-}
-
-.btn-instruction:hover a {
-    color: white;
-}
-
-.derriere .recette-instruction {
-    font-size: 30px;
-}
-
-/*************** Responsive **********************/
-
-@media screen and (max-width: 890px) {
-
-    .block-recette {
-        width: 100%;
-        height: 300px;
-    }
 }
 
 
-@media screen and (max-width:425px) {
 
 
-    .container-recettes {
-        padding: 20px;
-        gap: 20px;
+
+
+/* Media Queries */
+@media screen and (min-width: 600px) {
+    .meal-search-box {
+        width: 540px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    #meal {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 2rem;
     }
 
-    /***************** Searh barre ****************/
-
-    .container-search {
-        margin-top: 20px;
+    .meal-item {
+        margin: 0;
     }
 
-    input[type="text"] {
-        height: 40px;
+    .meal-details {
+        width: 700px;
     }
+}
 
-    .block-recette {
-        height: 300px;
+@media screen and (min-width: 992px) {
+    #meal {
+        grid-template-columns: repeat(3, 1fr);
     }
-
 }
