add important css to heart Icon

--- a/style.css
+++ b/style.css
@@ -135,9 +135,9 @@ footer {
 
 .card-body-heart:hover {
     font-size: 25px;
-    color: gray;
+    color: gray !important;
 }
 
 .card-body-heart.like {
-    color: green;
+    color: green !important;
 }
