--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ footer {
 
 .speiseplanFilter {
     margin-bottom: 4em;
+    margin-top: 4em;
 }
 
 .speiseplanFilter span {
@@ -140,4 +141,32 @@ footer {
 
 .card-body-heart.like {
     color: green !important;
+}
+
+.headerImage img {
+    width: 100%;
+}
+
+/* Form Add New Speise */
+.addSpeise {
+    text-align: center;
+    margin-bottom: 2em;
+    margin-top: 2em;
+}
+
+.addSpeise .btnNewSpeise {
+    background: #00adff;
+    color: white;
+}
+
+.formNewSpeise {
+    max-width: 70%;
+    margin: auto;
+    padding: 20px;
+    box-shadow: 0px 0px 11px 1px rgba(0, 0, 0, 0.2);
+    display: none;
+}
+
+.tox-tinymce-aux {
+    display: none !important;
 }
